--- a/WEB_PROYECTO1/pom.xml
+++ b/WEB_PROYECTO1/pom.xml
@@ -27,6 +27,13 @@
             <artifactId>java-cup-runtime</artifactId>
             <version>11b-20160615</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20201115</version>
+        </dependency>
+
     </dependencies>
 
     <build>
