--- a/APP_CLIENTE_PROYECTO1/pom.xml
+++ b/APP_CLIENTE_PROYECTO1/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>java-cup-runtime</artifactId>
             <version>11b-20160615</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE122</version>
+        </dependency>
     </dependencies>
 </project>
