--- a/WEB_PROYECTO1/pom.xml
+++ b/WEB_PROYECTO1/pom.xml
@@ -29,9 +29,9 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20201115</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
         </dependency>
 
     </dependencies>
